<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting_activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_setting"
        app:title="@string/titl_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_setting">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mass_push"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:textColor="@color/black"
                android:text="@string/mass_push"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/ed_mass_push"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:backgroundTint="@color/black"
                android:maxLength="2"
                android:textColor="@color/black"
                android:ems="10"
                android:inputType="number"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cal_mass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:textColor="@color/black"
                android:text="@string/mass_call"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/ed_mas_cal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:maxLength="2"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                android:ems="10"
                android:inputType="number"
                android:textSize="18dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>