<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Включение Toolbar -->

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="545dp"
        android:layout_height="948dp"
        android:layout_marginStart="-60dp"
        android:layout_marginBottom="-45dp"
        app:layout_constraintBottom_toBottomOf="@+id/calib"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/text" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_massa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="------"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/pngwing" />

    <TextView
        android:id="@+id/textView_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="----"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_set_push_auto"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_qadro"
        android:text="@string/push_auto"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_massa" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/set_push"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_qadro"
        android:text="@string/push"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_set_push_auto" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/zero"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_qadro"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_set_push_auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_set_push_auto" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calib"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_qadro"
        android:text="@string/calib"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/set_push"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/set_push" />

    <TextView
        android:id="@+id/overload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="overload"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/textView_temp"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/textView_temp"
        app:layout_constraintTop_toTopOf="@+id/textView_temp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/pngwingb" />

    <TextView
        android:id="@+id/text_bat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="----"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

</androidx.constraintlayout.widget.ConstraintLayout>